<resources>
    <string name="app_name">"Poké History"</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="regionName">Region name</string>
    <string name="descriptionContent">Description oh the Region</string>
    <string name="example_application">Example application</string>
    <string name="regionpicture">regionPicture</string>
    <string name="story_of_the_region">Story of the Region</string>
    <string name="legend">Legend</string>
    <string name="description_of_legendaries_1">description of legendaries 1</string>
    <string name="description_of_legendaries_2">description of legendaries 2</string>
    <string name="description_of_legendaries_3">description of lengendaries 3</string>
    <string name="end_of_story">~End of Story~</string>
    <string name="image_description">mini_map_region</string>
    <string name="color_skin">#B58C5B</string>
    <string name="dark_brown">#230C04</string>
</resources>
