<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/story_background"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/regionPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/regionpicture"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/amita"
                android:text="@string/legend"
                android:textStyle="italic"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/eagle_lake"
                android:text="@string/descriptionContent"
                android:textColor="@color/brown_description"
                android:textSize="13sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/legendary1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/eagle_lake"
                android:textSize="13sp"
                android:textColor="@color/dark_red"
                android:text="@string/description_of_legendaries_1"/>

            <ImageView
                android:id="@+id/legendPic1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/legendary2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/eagle_lake"
                android:textSize="13sp"
                android:textColor="@color/dark_blue"
                android:text="@string/description_of_legendaries_2"/>

            <ImageView
                android:id="@+id/legendPic2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/legendary3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/eagle_lake"
                android:textSize="13sp"
                android:textColor="@color/dark_green"
                android:text="@string/description_of_legendaries_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_of_story"
                android:textSize="13sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="148dp"
                android:layout_marginStart="148dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/amita"
                android:textColor="@color/dark_pink"
                android:textStyle="bold|italic"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
