<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dip">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_List"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dip"
            android:contentDescription="@string/image_description" />

        <TextView
            android:id="@+id/firstLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:fontFamily="@font/trade_winds"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/regionName"
            android:textColor="@color/color_region_top"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-55dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/secondLine"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_weight="5"
            android:fontFamily="@font/eagle_lake"
            android:text="@string/descriptionContent"
            android:textColor="@color/pale_green"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>
